--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-select": "^5.2.2",
     "sass": "^1.49.8",
     "typescript": "^4.4.2",
@@ -57,6 +58,7 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/react-modal": "^3.13.1",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.5.1",
     "css-loader": "^5.2.7",
