--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-paginate": "^8.1.2",
     "react-select": "^5.2.2",
     "sass": "^1.49.8",
     "typescript": "^4.4.2",
