--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "babel-preset-react-app": "^10.0.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-paginate": "^8.1.2",
