--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@scc/styles": "^1.0.27",
+    "@scc/styles": "^1.0.31",
     "@storybook/addons": "^6.4.19",
     "@storybook/preset-scss": "^1.0.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,6 +18,7 @@
     "babel-preset-react-app": "^10.0.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
