--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "babel-preset-react-app": "^10.0.1",
     "classnames": "^2.3.1",
+    "prettier": "^2.6.0",
     "react": "^17.0.2",
     "react-cool-onclickoutside": "^1.7.0",
     "react-date-picker": "^8.4.0",
@@ -29,11 +30,14 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "npm run storybook",
-    "build": "build-storybook",
+    "start": "run-p watch:tailwind dev",
+    "build": "npm run build:tailwind && build-storybook",
+    "dev": "npm run build:tailwind && start-storybook",
     "storybook": "start-storybook -p 6006",
+    "start-storybook": "npm run storybook",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=6a64316903ce"
+    "build:tailwind": "postcss src/css/tailwind.css -o src/css/main.css",
+    "watch:tailwind": "postcss -w src/css/tailwind.css -o src/css/main.css"
   },
   "eslintConfig": {
     "extends": [
@@ -63,13 +67,17 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@types/react-modal": "^3.13.1",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.5.1",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^5.5.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
     "sass-loader": "^10.1.1",
     "storybook-addon-xd-designs": "^6.0.0",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^3.0.23"
   }
 }
