--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-dom": "^17.0.9",
     "babel-preset-react-app": "^10.0.1",
     "classnames": "^2.3.1",
+    "d3": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-faux-dom": "^4.5.0",
     "react-modal": "^3.14.4",
     "react-paginate": "^8.1.2",
     "react-select": "^5.2.2",
@@ -59,6 +61,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/d3": "^7.1.0",
+    "@types/react-faux-dom": "^4.1.5",
     "@types/react-modal": "^3.13.1",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.5.1",
