Added smart table story

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@wojtekmaj/react-daterange-picker": "^3.4.0",
+    "axios": "^0.26.1",
     "babel-preset-react-app": "^10.0.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
@@ -61,6 +63,7 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-modal": "^3.13.1",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.5.1",
